--- a/src/components/HomeContent.module.scss
+++ b/src/components/HomeContent.module.scss
@@ -19,8 +19,12 @@
     right: -30px;
     width: 850px;
 
+    @media (max-width: 1286px) {
+        width: 750px;
+    }
+
     @include desktop {
-        max-width: 600px;
+        max-width: 550px;
         top: 140px;
         right: 30px;
     }
@@ -141,8 +145,8 @@
     .containerContent__button {
         margin-bottom: 270px;
         border-radius: 20px;
-        background: var(--gr, linear-gradient(141deg, #1DD844 0%, #CBF62E 100%));
-        box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.25);
+        background: var(--gr, linear-gradient(141deg, rgb(29, 216, 68) 0%, #CBF62E 100%));
+        box-shadow: 0px 0px 10px 5px rgba(98, 195, 74, 0.667);
         color: #242424;
         text-align: center;
         font-family: GT Walsheim Pro;
@@ -151,12 +155,20 @@
         font-weight: 500;
         line-height: 130%;
         padding: 20px 30px;
+        transition: 0.3s ease;
 
-        &:hover {}
+        &:hover {
+            box-shadow: 0px 0px 11px 9px rgba(98, 195, 74, 0.667);
+        }
 
-        &:active {}
+        &:active {
+            box-shadow: inset 0px 4px rgba(91, 91, 91, 0.25);
+        }
 
-        &:disabled {}
+        &:disabled {
+            box-shadow: none;
+            color: rgba(36, 36, 36, 0.50);
+        }
 
         @include desktop {
             margin-bottom: 200px;
