--- a/src/components/menu/Menu.module.scss
+++ b/src/components/menu/Menu.module.scss
@@ -1,7 +1,20 @@
 @import "../../styles/base.scss";
 
-.menu {
 
+.bg {
+    z-index: 100;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(8px);
+}
+
+.menu {
     padding: 20px 16px 0 20px;
     position: absolute;
     top: 0;
