--- a/src/components/formCard/FormCard.module.scss
+++ b/src/components/formCard/FormCard.module.scss
@@ -79,37 +79,8 @@
 .fc__content {
     max-width: 455px;
 
-    .content__title {
-        padding-top: 56px;
-        color: #FFF;
-        font-size: 45px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 105%;
-        letter-spacing: -1.35px;
-        padding-bottom: 25px;
-
-        @include tablet {
-            font-size: 40px;
-            padding-top: 48px;
-        }
-
-
-        @include tablet-min {
-            font-size: 28px;
-            padding-top: 40px;
-            padding-bottom: 18px;
-        }
-
-        @include phone {
-            font-size: 23px;
-            padding-top: 45px;
-            padding-bottom: 15px;
-        }
-    }
-
     .content__text {
-        padding-bottom: 35px;
+        padding: 56px 0 35px 0;
         color: #FFF;
         font-size: 21px;
         font-style: normal;
