--- a/src/components/aboutCard/AboutCard.module.scss
+++ b/src/components/aboutCard/AboutCard.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    cursor: pointer;
 
     @include phone {
         max-width: 260px;
