--- a/src/components/aboutCard/AboutCard.module.scss
+++ b/src/components/aboutCard/AboutCard.module.scss
@@ -8,6 +8,11 @@
     flex-direction: column;
     justify-content: center;
     cursor: pointer;
+    transition: 0.3s ease;
+
+    &:hover {
+        transform: scale(1.05);
+    }
 
     @include phone {
         max-width: 260px;
